# JavaLinter

./: .flake8  .gitignore  README.md  dialect_example.json  dialects.py  empty_lines_liner.py  linter.py  main.py  naming_linter.py  pyproject.toml  space_linter.py
java_linter/: dialects.py  empty_lines_liner.py  linter.py  naming_linter.py  shared.py  space_linter.py
tests/: test_empty_lines_linter.py  test_linter.py  test_naming_linter.py  test_space_linter.py
tests/test_files/: BadMainApplicationFrame.java  BadMyJMenu.java  GoodMainApplicationFrame.java  GoodMyJMenu.java
